# seer

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  clusters.example.yaml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
src/seer/: __init__.py  alert_rules.json  app.py  config.py  detail_screen.py  explain.py  k8s_sync.py  models.py  paths.py  search.py  theme.py  widgets.py
