[project]
name = "seer"
version = "0.1.0"
description = "k9s-style TUI for browsing Prometheus alert rules synced from Kubernetes clusters"
readme = "README.md"
requires-python = ">=3.10"
# Exact pins 
dependencies = [
    "textual==8.2.5",
    "pyyaml==6.0.2",
    "google-genai==2.8.0",
    "kubernetes==36.0.0",
]

[project.scripts]
seer = "seer.app:main"
seer-sync = "seer.k8s_sync:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seer"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
# Defaults (E/F) plus import sorting, bugbear, pyupgrade, and simplify.
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
